# supergene_classes

./: .gitignore  README.md  chapter.py  chapter_beanie.py  chapter_generation.md  create_books_dirs.py  log.py  main.py  pyproject.toml  supergene_classes.code-workspace
supergene_classes/: chapter.py  log.py  main.py
tasks/: create_books_dirs.py
